# tern

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.html
src/tern/: __init__.py  cli.py
tests/: __init__.py  _fakes.py  _mcp_echo_server.py  test_adapters_nova_openai.py  test_bash.py  test_bedrock_adapter.py  test_bedrock_retry.py  test_canonical.py  test_canonical_xml_rescue.py  test_config_and_secrets.py  test_curate.py  test_glob_tool.py  test_grep_tool.py  test_loop.py  test_loop_stream.py  test_loop_tools.py  test_mcp_bridge.py  test_mcp_integration.py  test_memory_store.py  test_memory_tool.py  test_notes.py  test_obs.py  test_pricing.py  test_redact.py  test_repo_memory.py  test_routing.py  test_routing_factory.py  test_s17_smoke.py  test_s18_recall.py  test_s18_router.py  test_s19_curator.py  test_s20_so_lookup.py  test_s21_hardening.py  test_s22_vision.py  test_s23_search_browser.py  test_s24_polish.py  test_skill_manage_tool.py  test_skills.py  test_smoke.py  test_store.py  (+3 more)
tests/tools/: _fakes.py  test_edit_block.py  test_permissions.py  test_protocol.py  test_read_file.py  test_registry.py
wiki/: index.md  log.md
wiki/concepts/: 14-modules.md  canonical-message-log.md  m1-m0-turn-loop.md  m11-observability.md  m4-canonical-messages.md  tern-vs-hermes-scope.md  tool-protocol-and-permissions.md  ui-polish-backlog.md
wiki/decisions/: adr-0001-jtbd-and-scope.md  adr-0002-runtime-shape.md  adr-0003-tool-surface.md  adr-0004-provider-layer.md  adr-0005-session-state.md  adr-0006-skills-runtime.md  adr-0007-live-html-notes-artifact.md  adr-0008-browser-and-mcp.md  adr-0009-core-loop-tool-parity.md  adr-0010-secret-redaction-policy.md  adr-0011-cognitive-routing-and-recall.md  adr-0012-long-running-build-hardening.md
wiki/entities/: aider.md  browser-use.md  claude-code.md  mcp-python-sdk.md  tern.md
wiki/roadmap/: 14-session-plan.md  differentiators.md
wiki/sessions/: S1-grounding-decisions.md  S10-session-graph.md  S11-skills-runtime.md  S12-live-html-notes-artifact.md  S13-browser-and-mcp.md  S17-repo-scoped-memory.md  (+19 more)
(+79 files in other folders)
