[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tern"
version = "0.0.1"
description = "A Python CLI coding agent — per-turn cost routing, skills first-class, replay/branch, live HTML notes, browser-use, MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ayush Singh", email = "ayush@antern.dev" }]
keywords = ["coding-agent", "llm", "cli", "claude", "bedrock"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "boto3>=1.34",
  "textual>=0.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "boto3-stubs[bedrock-runtime]>=1.34",
    "mypy>=1.10",
]

[project.scripts]
tern = "tern.cli:app"

[project.urls]
Homepage = "https://github.com/antern-dev/tern"
Repository = "https://github.com/antern-dev/tern"

[tool.hatch.build.targets.wheel]
packages = ["src/tern"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# E501: line-length handled by formatter.
# B008: Typer relies on function-call defaults (typer.Option / typer.Argument).
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["tern"]

[[tool.mypy.overrides]]
module = ["textual.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
